Fix client store; Add transaction parser